# jarvis

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  actions.py  audit_log.py  auth.py  calendar_access.py  claude_pool.py  claude_runner.py  conversations.py  crisis_floor.py  cwd_allowlist.py  dispatch_registry.py  docker-compose.yml  file_perms.py  idle_lock.py  mail_access.py  memory.py  notes_access.py  pyproject.toml  qa.py  requirements-dev.txt  requirements.txt  screen.py  secrets_redactor.py  server.py  sidecar_client.py  untrusted_content.py  vault.py  work_mode.py
.claude/: settings.json
docs/: BACKLOG.md  DOCKER.md
frontend/: index.html
host-sidecar/: NOTICE.md  README.md  com.jarvis.sidecar.plist  pyproject.toml  setup.sh  teardown.sh
host-sidecar/jarvis_sidecar/: __init__.py  __main__.py  app.py  auth.py  config.py  cwd_allowlist.py  piper_engine.py  spawn.py  stt.py  tts.py
host-sidecar/jarvis_sidecar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
host-sidecar/tests/: test_auth.py  test_cwd_allowlist.py  test_health.py  test_piper.py  test_spawn.py  test_stt.py  test_tts.py
openclaw_ports/: NOTICE.md  __init__.py  gh_issues.py  tts_local_cli.py  web_search.py
tests/: test_action_validators.py  test_applescript_safety.py  test_audit_log.py  test_auth.py  test_claude_pool.py  test_claude_runner.py  test_conversations.py  test_crisis_floor.py  test_cwd_allowlist.py  test_feedback_loop.py  test_file_perms.py  test_goal_drift.py  test_idle_lock.py  test_personas_setup.py  (+6 more)
(+45 files in other folders)
