[project]
name = "jarvis-sidecar"
version = "0.1.0"
description = "macOS host sidecar for JARVIS: local TTS via `say` and STT via whisper.cpp."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jarvis_sidecar*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
